[package]
name = "RainySummer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
dirs = "3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
error-chain = "0.12.4"
tokio = { version = "0.2.3", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
